<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"/>

    <ImageView
        android:id="@+id/profile_user"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:src="@drawable/user_profile"
        android:contentDescription="@string/user_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/profile_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:fontFamily="@font/rubik_light"
        android:textStyle="bold"
        android:text="@string/add_photo"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_addPhoto"
        android:layout_marginStart="32dp"
        android:inputType="text"
        android:hint="@string/id_number"
        android:id="@+id/et_idNumber"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_idNumber"
        android:src="@drawable/infocard"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/username_image"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/et_idNumber"
        android:layout_marginStart="32dp"
        android:inputType="text"
        android:hint="@string/address"
        android:id="@+id/et_address"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_address"
        android:src="@drawable/address"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/username_image"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/et_address"
        android:layout_marginStart="32dp"
        android:inputType="text"
        android:hint="@string/city"
        android:id="@+id/et_City"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_City"
        android:src="@drawable/company"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/phone_image"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/et_City"
        android:layout_marginStart="32dp"
        android:inputType="date"
        android:hint="@string/post_code"
        android:id="@+id/et_postCode" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_postCode"
        android:src="@drawable/postcode"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/date_image"/>



</androidx.constraintlayout.widget.ConstraintLayout>