<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usahaq_skripsi.ui.dashboard.AddBusinessActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/logo"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="58dp"
        android:text="@string/create_business"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profile_business"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/user_profile_picture"
        android:scaleType="fitCenter"
        android:src="@drawable/user_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <TextView
        android:id="@+id/tv_addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/rubik_light"
        android:text="@string/add_photo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_business" />

    <EditText
        android:id="@+id/et_business"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:hint="@string/business_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_addPhoto" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/username_image"
        android:src="@drawable/company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_business" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:hint="@string/address"
        app:layout_constraintTop_toBottomOf="@id/et_business" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/date_image"
        android:src="@drawable/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_address" />

    <ImageButton
        android:id="@+id/btn_addBusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:src="@drawable/create_btn_business"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>