<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"/>

    <TextView
        android:id="@+id/tv_fill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/rubik_light"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/fill_your_information"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_fill"
        android:layout_marginStart="32dp"
        android:inputType="text"
        android:hint="@string/full_name"
        android:id="@+id/et_name"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_name"
        android:src="@drawable/infocard"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/username_image"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:layout_marginStart="32dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/et_password" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_password"
        android:src="@drawable/lock"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/phone_image" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/phone_image"
        android:src="@drawable/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_email" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:text="@string/have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvbtn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_have_account"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginTop="24dp"
        android:textColor="@color/orange"
        android:text="@string/login"
        android:textSize="16sp"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:focusable="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>