<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"/>

    <TextView
        android:id="@+id/tv_fill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/rubik_light"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/terms_of_service"/>

    <TextView
        android:id="@+id/tv_tos1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fill"
        android:text="@string/tos_1"
        android:fontFamily="@font/rubik_light"
        android:layout_marginRight="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/tv_tos1"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/privacy_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="4dp"
        android:text="@string/privacy"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/line"/>

    <TextView
        android:id="@+id/tv_tos2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/tos_2"
        app:layout_constraintTop_toBottomOf="@id/privacy_text"/>

    <TextView
        android:id="@+id/tv_tos3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_tos2"
        android:text="@string/tos_3"/>

    <CheckBox
        android:id="@+id/cb_tos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_tos3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cb_tos"
        android:layout_marginTop="13dp"
        android:textColor="@color/black"
        android:layout_marginEnd="36dp"
        android:text="@string/i_have_read_and_understand_the_terms_of_service"/>

</androidx.constraintlayout.widget.ConstraintLayout>